...
                    isBackNav
                />
                <KeyboardAvoidingView behavior='position'>
                    <ScrollView keyboardShouldPersistTaps='always'>
                        <View style={styles.textAreaContainer}>
                            <TextInput
                                testID='textinput_desc'
                                style={styles.textArea}
                                underlineColorAndroid="transparent"
                                placeholder="Comment"
                                placeholderTextColor="grey"
                                numberOfLines={10}
                                multiline={true}
                                defaultValue={comment}
                                onChangeText={($event) => this.handleChange($event)}
                            />
                            <Button style={styles.button}
                                    testID='text_save'
                                    title="Save Comment"
                                    disabled={!isChange}
                                    onPress={() => this.handleSave()}/>
                        </View>
                    </ScrollView>
                </KeyboardAvoidingView>
...
